--- a/src/main/webapp/i18n/vi/order.json
+++ b/src/main/webapp/i18n/vi/order.json
@@ -22,7 +22,8 @@
       "createdDate": "Created Date",
       "orderAddress": "Order Address",
       "orderPhone": "Order Phone",
-      "status": "Status"
+      "status": "Status",
+      "saveOnSuccess": "Status"
     }
   }
 }
