--- a/src/main/webapp/i18n/vi/banner.json
+++ b/src/main/webapp/i18n/vi/banner.json
@@ -2,7 +2,7 @@
   "sellphonealamApp": {
     "banner": {
       "home": {
-        "title": "Banners",
+        "title": "Banner",
         "refreshListLabel": "Refresh list",
         "createLabel": "Thêm mới một Banner",
         "createOrEditLabel": "Thêm mới hoặc cập nhật Banner",
