--- a/src/main/webapp/i18n/vi/home.json
+++ b/src/main/webapp/i18n/vi/home.json
@@ -1,6 +1,6 @@
 {
   "home": {
-    "title": "Trang chủ",
+    "title": "Sell Phone",
     "subtitle": "Đây là trang chủ của bạn",
     "logged": {
       "message": "Bạn đang đăng nhập bằng tài khoản \"{{username}}\"."
