--- a/src/main/webapp/i18n/vi/global.json
+++ b/src/main/webapp/i18n/vi/global.json
@@ -21,7 +21,7 @@
       },
       "account": {
         "main": "Tài khoản",
-        "settings": "Cài đặt",
+        "settings": "Thông tin",
         "password": "Mật khẩu",
         "sessions": "Phiên đăng nhập",
         "login": "Đăng nhập",
